--- a/react-webpack/package.json
+++ b/react-webpack/package.json
@@ -5,6 +5,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "create-react-class": "^15.6.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
