--- a/react-webpack/package.json
+++ b/react-webpack/package.json
@@ -26,6 +26,8 @@
     "eslint-plugin-react-hooks": "^4.1.0",
     "eslint-watch": "^7.0.0",
     "husky": "^4.2.5",
+    "lint-staged": "^10.2.13",
+    "prettier": "^2.1.1",
     "react-hot-loader": "^4.12.21",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
