--- a/react-webpack/package.json
+++ b/react-webpack/package.json
@@ -1,17 +1,9 @@
 {
   "scripts": {
     "start": "npm run lint & node server.js",
-    "precommit": "npm run lint & npm test & lint-staged",
-    "prepush": "npm run lint & npm test & lint-staged",
     "lint": "eslint ./src/*.js",
     "lint:fix": "eslint --fix ./src/index.js",
     "test": "..."
-  },
-  "lint-staged": {
-    "*.{js,json,css,scss,html,md}": [
-      "prettier --write",
-      "git add"
-    ]
   },
   "devDependencies": {
     "@babel/polyfill": "^7.10.4",
@@ -44,5 +36,11 @@
     "create-react-class": "^15.6.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint & npm test",
+      "pre-push": "npm run lint & npm test"
+    }
   }
 }
